--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,12 +4,17 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+@theme {
+  --color-turk: #00EEFF;
+  --color-cloud: #E9E9E9;
+  --color-abyss: #1B1750;
+}
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-inter: var(--font-inter);
+  --font-dongle: var(--font-dongle);
 }
 
 @media (prefers-color-scheme: dark) {
